2003-11-12  Paul Eggert  <eggert@twinsun.com>

	* xalloc.h: Do not include <limits.h> or <stdint.h>.
	(xalloc_oversized): Use sizeof (ptrdiff_t) and sizeof (size_t) for
	the heuristic, rather than PTRDIFF_MAX and SIZE_MAX.  This
	heuristic is just as accurate as far as we know, and it removes a
	dependency on size_max.m4 and ptrdiff_max.m4.

2003-11-12  Paul Eggert  <eggert@twinsun.com>

	* xstrtol.c (__xstrtol): Remove "break" immediately after
	"return", to pacify some unknown compiler.  Problem reported
	by Joerg Schilling.

2003-11-11  Bruno Haible  <bruno@clisp.org>

	* xsize.h (SIZE_MAX): Remove fallback definition.
	* xalloc.h: Include limits.h. Assume SIZE_MAX and PTRDIFF_MAX are
	defined.

2003-11-10  Paul Eggert  <eggert@twinsun.com>

	* xalloc.h (xalloc_oversized): [! (defined PTRDIFF_MAX &&
	PTRDIFF_MAX < SIZE_MAX)]: Fix off-by-one error that would have
	rejected some allocations of exactly SIZE_MAX - 2 bytes.
	From Bruno Haible.
	[defined PTRDIFF_MAX && PTRDIFF_MAX < SIZE_MAX]: Use SIZE_MAX,
	not (size_t) -1, since it's defined here.

2003-11-06  Paul Eggert  <eggert@twinsun.com>

	* xalloc.h [HAVE_STDINT_H]: Include <stdint.h>.
	(xalloc_oversized) [! (PTRDIFF_MAX < SIZE_MAX)]:
	Reject sizes of exactly SIZE_MAX bytes.
	* xreadlink.c: Include "xalloc.h" before checking whether SIZE_MAX
	is defined, since "xalloc.h" now defines SIZE_MAX on modern hosts.

2003-11-05  Bruno Haible  <bruno@clisp.org>

	* xsize.h: Include limits.h, to avoid a possible collision with
	SIZE_MAX defined in <limits.h> on Solaris.

2003-11-04  Bruno Haible  <bruno@clisp.org>

	* xsize.h: New file.
	* linebreak.c: Include xsize.h.
	(mbs_possible_linebreaks, mbs_width_linebreaks): Check malloc()
	argument for overflow.
	Suggested by Paul Eggert.

2003-10-31  Bruno Haible  <bruno@clisp.org>

	* wait-process.c (wait_process): Use waitid with WNOWAIT if available,
	to avoid (extremely rare) race condition.
	Suggested by Paul Eggert.

2003-11-03  Jim Meyering  <jim@meyering.net>
